--- a/project.ipynb
+++ b/project.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class contact(object):\n",
+    "class contact :\n",
     "    def __init__ (self , first_name , last_name , number ):\n",
     "        self.first_name = first_name\n",
     "        self.last_name = last_name\n",
     "        self.number = number\n",
     "        self.date_creation = date.today ()\n",
+    "\n",
+    "        \n",
     "         \n"
    ]
   },
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -98,23 +100,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>b</td>\n",
-       "      <td>nb</td>\n",
-       "      <td>à</td>\n",
-       "      <td>2023-01-26</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  first name last name number creation date\n",
-       "0          b        nb      à    2023-01-26"
+       "Empty DataFrame\n",
+       "Columns: [first name, last name, number, creation date]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,6 +162,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 40-41: malformed \\N character escape (3961112350.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[44], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    choix_modif=input('voulez vous modifier un autre contact? Y\\N \\n')\u001b[0m\n\u001b[1;37m                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 40-41: malformed \\N character escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "choix_modif = input(\"modifier un contact? Y/N\\n\")\n",
+    "while choix_modif == 'Y':\n",
+    "    contact_a_modifier = input ('quel contact voulez vous modifier? \\n')\n",
+    "    if contact_a_modifier in Data:\n",
+    "        mask = contact_csv[\"first name\"] == contact_a_modifier\n",
+    "        sub_data = contact_csv.loc[mask]\n",
+    "        sub_data['number'] = input('insérez le numéro: \\n')\n",
+    "        choix_modif=input('voulez vous modifier un autre contact? Y\\N \\n')\n",
+    "\n",
+    "        \n",
+    "        \n"
+   ]
   },
   {
    "attachments": {},
