--- a/project.ipynb
+++ b/project.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -100,17 +100,31 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>victor</td>\n",
+       "      <td>d</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2023-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>anis</td>\n",
+       "      <td>b</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2023-01-26</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [first name, last name, number, creation date]\n",
-       "Index: []"
+       "  first name last name  number creation date\n",
+       "0     victor         d       6    2023-01-26\n",
+       "1       anis         b       7    2023-01-26"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,29 +179,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 40-41: malformed \\N character escape (3961112350.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[44], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    choix_modif=input('voulez vous modifier un autre contact? Y\\N \\n')\u001b[0m\n\u001b[1;37m                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 40-41: malformed \\N character escape\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first name</th>\n",
+       "      <th>last name</th>\n",
+       "      <th>number</th>\n",
+       "      <th>creation date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>victor</td>\n",
+       "      <td>d</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2023-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>anis</td>\n",
+       "      <td>b</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2023-01-26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first name last name  number creation date\n",
+       "0     victor         d      32    2023-01-26\n",
+       "1       anis         b       7    2023-01-26"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "choix_modif = input(\"modifier un contact? Y/N\\n\")\n",
+    "choix_modif = input(\"modifier un contact? Y/N\")\n",
     "while choix_modif == 'Y':\n",
     "    contact_a_modifier = input ('quel contact voulez vous modifier? \\n')\n",
-    "    if contact_a_modifier in Data:\n",
-    "        mask = contact_csv[\"first name\"] == contact_a_modifier\n",
-    "        sub_data = contact_csv.loc[mask]\n",
-    "        sub_data['number'] = input('insérez le numéro: \\n')\n",
-    "        choix_modif=input('voulez vous modifier un autre contact? Y\\N \\n')\n",
-    "\n",
-    "        \n",
+    "    if contact_a_modifier in list_first_names:\n",
+    "        mask = dataframe[\"first name\"] == contact_a_modifier\n",
+    "        dataframe['number'].loc[mask] = input('num')\n",
+    "        dataframe.to_csv('Contact.csv', index=False)\n",
+    "        contact_csv=pd.read_csv('Contact.csv')\n",
+    "        choix_modif=input('voulez vous modifier un autre contact? Y/N \\n')\n",
+    "    else :\n",
+    "        print(\"ce contact n'existe pas\")\n",
+    "        choix_modif=input('voulez vous modifier un autre contact? Y/N \\n')\n",
+    "        if choix_modif == 'N': \n",
+    "            break\n",
+    "contact_csv        \n",
     "        \n"
    ]
   },
@@ -201,10 +268,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first name</th>\n",
+       "      <th>last name</th>\n",
+       "      <th>number</th>\n",
+       "      <th>creation date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>victor</td>\n",
+       "      <td>d</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2023-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>anis</td>\n",
+       "      <td>b</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2023-01-26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first name last name  number creation date\n",
+       "0     victor         d      32    2023-01-26\n",
+       "1       anis         b       7    2023-01-26"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "choix_modif = input(\"supprimer un contact? Y/N\")\n",
+    "while choix_modif == 'Y':\n",
+    "    contact_a_modifier = input ('quel contact voulez vous supprimer? \\n')\n",
+    "    if contact_a_modifier in list_first_names:\n",
+    "        list_first_names.remove(contact_a_modifier)\n",
+    "        dataframe.to_csv('Contact.csv', index=False)\n",
+    "        contact_csv=pd.read_csv('Contact.csv')\n",
+    "        choix_modif=input('voulez vous modifier un autre contact? Y/N \\n')\n",
+    "    else :\n",
+    "        print(\"ce contact n'existe pas\")\n",
+    "        choix_modif=input('voulez vous modifier un autre contact? Y/N \\n')\n",
+    "        if choix_modif == 'N': \n",
+    "            break\n",
+    "contact_csv  "
+   ]
   }
  ],
  "metadata": {
